--- a/app/public/css/app.css
+++ b/app/public/css/app.css
@@ -567,19 +567,25 @@ body {
 .full-form-login {
   width: 100vw;
   height: 100vh;
-  background: linear-gradient(to right, #000000, #ffffff);
-  background-image: url("https://i.pinimg.com/originals/8c/a7/87/8ca787d349e1fe427095f749c300e7a7.jpg"); }
+  background-color: #fff;
+  display: flex; }
+
+.background-kma {
+  width: calc(100% - 500px);
+  border-right: 1px solid #b5b0b0;
+  height: 100%;
+  display: flex;
+  justify-content: center; }
+  .background-kma img {
+    width: 400px;
+    margin-top: 50px;
+    margin-bottom: 20px; }
 
 .form-room {
-  width: 390px;
-  height: 462px;
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-  border: solid 0.1px #0084ff;
-  border-radius: 50px;
-  box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.5);
+  width: 400px;
+  height: 450px;
+  margin-left: 50px;
+  margin-top: 100px;
   background-color: #fff; }
 
 .label-form-create {
@@ -602,12 +608,8 @@ body {
   color: #333; }
 
 .input-form-room {
-  position: absolute;
   width: 90%;
-  height: 90%;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%); }
+  height: 90%; }
 
 .full-form-create {
   width: 100vw;
