--- a/app/src/resources/views/user/login.hbs
+++ b/app/src/resources/views/user/login.hbs
@@ -1,4 +1,12 @@
 <div class="full-form-login">
+    <div class="background-kma">
+        <div>
+
+        <img src="https://raw.githubusercontent.com/gist/vinhjaxt/fa4208fd6902dd8b2f4d944fa6e7f2af/raw/454f58aeac4fdeb459476eae7128dc6ff57df25f/logo-hvktmm.png" alt="">
+        <h2>HỌC VIỆN KỸ THUẬT MẬT MÃ</h2>
+
+        </div>
+    </div>
     <div class="form-room">
         <div class="input-form-room">
             <form action="/user/loginPost" method="POST">
