done fix message time

--- a/app/src/resources/views/chat.hbs
+++ b/app/src/resources/views/chat.hbs
@@ -537,6 +537,7 @@
                 // Tạo phần tử con (p.message__date)
                 var messageDate = document.createElement('p');
                 messageDate.classList.add('message__date');
+                messageDate.classList.add('message__date2');
                 messageDate.textContent = data.message.createdAt;
 
                 // Thêm a.message__content và p.message__date vào div.message__row1
